--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "date-fns": "^3.0.6",
+    "next": "14.0.4",
+    "rc-slider": "^10.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "sass": "^1.69.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "json-server": "^0.17.4",
+    "typescript": "^5.3.3"
   }
 }
